--- a/csslearn.html
+++ b/csslearn.html
@@ -47,7 +47,7 @@
                     </select><br>
                     <div id="url" style="display: none;" class="background-m">
                         <label for="bg-url">BG URL: 
-                            <input type="url" style="width: 100%;" id="bg-url">
+                            <input type="text" style="width: 100%;" id="bg-url">
                         </label>
                     </div>
                     <div id="linear-gradient" style="display: none;" class="background-m">
